--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
         "php-flasher/flasher-laravel": "^2.4",
-        "razorpay/razorpay": "^2.9"
+        "razorpay/razorpay": "^2.9",
+        "stripe/stripe-php": "^19.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
